--- a/No.2 - 初步接触 CSS 2D 变形/index.html
+++ b/No.2 - 初步接触 CSS 2D 变形/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,22 +17,39 @@
             border: 1px solid #ebebeb;
             background-color: #f7f6f6;
         }
+
         .box1 {
             /*  skew() 方法，元素翻转给定的角度，根据给定的水平线（X 轴）和垂直线（Y 轴） */
+            -webkit-transform: skew(30deg, 0);
+            -moz-transform: skew(30deg, 0);
+            -ms-transform: skew(30deg, 0);
             transform: skew(30deg, 0)
         }
+
         .box2 {
             /* scale() 方法，元素的尺寸会增加或减少，根据给定的宽度（X 轴）和高度（Y 轴） */
-            transform: scale(0.5,1)
+            -webkit-transform: scale(0.5, 1);
+            -moz-transform: scale(0.5, 1);
+            -ms-transform: scale(0.5, 1);
+            transform: scale(0.5, 1)
         }
+
         .box3 {
             /* rotate() 方法，元素顺时针旋转给定的角度。允许负值，元素将逆时针旋转。 */
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
             transform: rotate(45deg)
         }
+
         .box4 {
             /*  translate() 方法，元素从其当前位置移动，根据给定的 left（x 坐标） 和 top（y 坐标） */
-            transform: translate(10px,20px)
+            -webkit-transform: translate(10px, 20px);
+            -moz-transform: translate(10px, 20px);
+            -ms-transform: translate(10px, 20px);
+            transform: translate(10px, 20px)
         }
+
         .box5 {
             /* 偏移 */
             /* matrix(0,0,0,0,X轴偏移量, Y轴偏移量) */
@@ -42,8 +60,6 @@
             /* 水平X轴向左倾斜30° */
             /* matrix(1,tan(0),tan(30°),1,0,0) */
             /* matrix(1,tan(Y轴倾斜度数),tan(X轴倾斜度数),1,0,0) */
-
-
             /* 旋转45 */
             /* transform: matrix(0.70711,0.70711,-0.70711,0.70711,0,0); */
             /* 斜切30 */
@@ -52,11 +68,15 @@
             /* transform: matrix(0.5,0,0,1,10,20); */
             /* 移动10,20 */
             /* transform: matrix(1,0,0,1,10,20); */
-            transform: matrix(0.5,0,0,1,0,0) matrix(1,0,0.57735,1,0,0) matrix(0.70711,0.70711,-0.70711,0.70711,0,0) matrix(1,0,0,1,10,20);
-           
+            -webkit-transform: matrix(0.5, 0, 0, 1, 0, 0) matrix(1, 0, 0.57735, 1, 0, 0) matrix(0.70711, 0.70711, -0.70711, 0.70711, 0, 0) matrix(1, 0, 0, 1, 10, 20);
+            -moz-transform: matrix(0.5, 0, 0, 1, 0, 0) matrix(1, 0, 0.57735, 1, 0, 0) matrix(0.70711, 0.70711, -0.70711, 0.70711, 0, 0) matrix(1, 0, 0, 1, 10, 20);
+            -ms-transform: matrix(0.5, 0, 0, 1, 0, 0) matrix(1, 0, 0.57735, 1, 0, 0) matrix(0.70711, 0.70711, -0.70711, 0.70711, 0, 0) matrix(1, 0, 0, 1, 10, 20);
+            transform: matrix(0.5, 0, 0, 1, 0, 0) matrix(1, 0, 0.57735, 1, 0, 0) matrix(0.70711, 0.70711, -0.70711, 0.70711, 0, 0) matrix(1, 0, 0, 1, 10, 20);
+
         }
     </style>
 </head>
+
 <body>
     <span class="box0">box0</span>
     <span class="box1">box1</span>
@@ -65,4 +85,5 @@
     <span class="box4">box4</span>
     <span class="box5">box5</span>
 </body>
+
 </html>
