--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>
             <a href="./No.2 - 初步接触 CSS 2D 变形/index.html">No.2 - 初步接触 CSS 2D 变形</a>
         </li>
+        <li>
+            <a href="./No.3 - CSS transition 和 CSS transform 配合制作动画/index.html">No.3 - CSS transition 和 CSS transform 配合制作动画</a>
+        </li>
     </ul>    
 </body>
 </html>
