--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li>
             <a href="./No.4 - 3D 空间的卡片翻转动效/index.html">No.4 - 3D 空间的卡片翻转动效</a>
         </li>
+         <li>
+            <a href="./No.5 - 纯 CSS 制作绕中轴旋转的立方体/index.html">No.5 - 纯 CSS 制作绕中轴旋转的立方体</a>
+        </li>
     </ul>    
 </body>
 </html>
