No.6 - 利用 CSS animation 制作一个炫酷的 Slider

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
          <li>
             <a href="./No.5 - 纯 CSS 制作绕中轴旋转的立方体/index.html">No.5 - 纯 CSS 制作绕中轴旋转的立方体</a>
         </li>
+         <li>
+            <a href="./No.6 - 利用 CSS animation 制作一个炫酷的 Slider/index.html">No.6 - 利用 CSS animation 制作一个炫酷的 Slider</a>
+        </li>
     </ul>    
 </body>
 </html>
