--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
          <li>
             <a href="./No.6 - 利用 CSS animation 制作一个炫酷的 Slider/index.html">No.6 - 利用 CSS animation 制作一个炫酷的 Slider</a>
         </li>
+        <li>
+            <a href="./No.8 - 把 AE 动画转换成 Web 原生动画/index.html">No.8 - 把 AE 动画转换成 Web 原生动画</a>
+        </li>
     </ul>    
 </body>
 </html>
