--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
             <a href="./No.8 - 把 AE 动画转换成 Web 原生动画/index.html">No.8 - 把 AE 动画转换成 Web 原生动画</a>
         </li>
     </ul>    
+    <h3>MVVM学院</h3>
+    <ul>
+        <li>
+            <a href="./MVVM/1.2 用webpack4快速搭建开发san helloworld/dist/index.html">1.2 用webpack4 / parcel快速搭建开发san helloworld</a>
+        </li>
+    </ul>
 </body>
 </html>
