--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="./MVVM/1.2 用webpack4快速搭建开发san helloworld/dist/index.html">1.2 用webpack4 / parcel快速搭建开发san helloworld</a>
         </li>
         <li>
-            <a href="./MVVM/2.1 数据操作/dist/index.html">1.2 用webpack4 / parcel快速搭建开发san helloworld</a>
+            <a href="./MVVM/2.1 数据操作/dist/index.html">2.1 数据操作</a>
         </li>
     </ul>
 </body>
