--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li>
             <a href="./MVVM/2.1 数据操作/dist/index.html">2.1 数据操作</a>
         </li>
+        <li>
+            <a href="./MVVM/2.2 条件和循环/dist/index.html">2.2 条件和循环</a>
+        </li>
     </ul>
 </body>
 </html>
