--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <li>
             <a href="./MVVM/2.2 条件和循环/dist/index.html">2.2 条件和循环</a>
         </li>
+        <li>
+            <a href="./MVVM/2.3 样式控制/dist/index.html">2.3 样式控制</a>
+        </li>
     </ul>
 </body>
 </html>
