--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <li>
             <a href="./MVVM/2.3 样式控制/dist/index.html">2.3 样式控制</a>
         </li>
+        <li>
+            <a href="./MVVM/2.4事件处理/dist/index.html">2.4事件处理</a>
+        </li>
     </ul>
 </body>
 </html>
