--- a/No.7 - 使用 animate.css 实现一个优雅的登录框/index.html
+++ b/No.7 - 使用 animate.css 实现一个优雅的登录框/index.html
@@ -6,19 +6,34 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
         <link rel="stylesheet" href="main.css">
         <style>
-            .form__label__content {
-                animation: form__label 2s forwards;
+            .anima .form__label__content {
+                animation: form__label 1s forwards;
             }
             @keyframes form__label {
                 0% {transform: scale(1) translateY(0px);}
                 100% {transform: scale(0.8) translateY(-15px);}
             }
-            .form__input {
-                animation: form__input 2s forwards;
-            }
             @keyframes form__input {
                 0% {}
-                100% {border-bottom: solid 1px #00d;}
+                100% {width: 100%;}
+            }
+            @keyframes form__input2 {
+                0% {width: 100%}
+                100% {width: 0%;}
+            }
+            .line {
+                display: inline-block;
+                position: absolute;
+                bottom: 0;
+                width: 0%;
+                height: 2px;
+                background-color: #f00;
+            }
+            .anima .line {
+                animation: form__input 1s forwards;
+            }
+            .anima2 .line {
+                animation: form__input2 1s forwards;
             }
         </style>
     </head>
@@ -27,19 +42,21 @@
             <section class="card">
                 <h3>Login</h3>
                 <form>
-                    <div class="form__wrapper" data-wow-delay="0.5s">
-                        <input type="email" class="form__input" id="email" name="email">
+                    <div class="form__wrapper " data-wow-delay="0.5s">
+                        <input  onfocus="getFocus(this)" onblur="clearFocus(this)" type="email" class="form__input" id="email" name="email">
                         <label class="form__label" for="email">
                         <span class="form__label__content">Email</span>
+                        <span class="line "></span>
                         </label>
                     </div>
                     <div class="form__wrapper" data-wow-delay="0.6s">
-                        <input type="password" class="form__input" id="password" name="password">
+                        <input  onfocus="getFocus(this)" onblur="clearFocus(this)" type="password" class="form__input" id="password" name="password">
                         <label class="form__label" for="password">
                         <span class="form__label__content">Password</span>
+                        <span class="line"></span>
                         </label>
                     </div>
-                    <div class="animated form__wrapper__submit pulse infinite" data-wow-delay="0.7s">
+                    <div class="animated form__wrapper__submit  infinite" id="btn" data-wow-delay="0.7s">
                         <div class="form__input__submit">
                             <button type="submit" name="submit" class="btn">Submit</button>
                         </div>
@@ -49,4 +66,15 @@
         </section>
     </body>
     <script src="https://ss1.bdstatic.com/5eN1bjq8AAUYm2zgoY3K/r/www/cache/static/protocol/https/jquery/jquery-1.10.2.min_65682a2.js"></script>
+    <script>
+        function getFocus(e) {
+            e.parentNode.classList.add('anima')
+        }
+        function clearFocus(e) {
+            e.parentNode.classList.add('anima2')
+            if(document.getElementById('email').value && document.getElementById('password').value) {
+                document.getElementById('btn').classList.add('pulse')
+            }
+        }
+    </script>
 </html>
