--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>2018IFE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
     <h3>设计师学院</h3>
     <ul>
@@ -21,19 +23,19 @@
         <li>
             <a href="./No.4 - 3D 空间的卡片翻转动效/index.html">No.4 - 3D 空间的卡片翻转动效</a>
         </li>
-         <li>
+        <li>
             <a href="./No.5 - 纯 CSS 制作绕中轴旋转的立方体/index.html">No.5 - 纯 CSS 制作绕中轴旋转的立方体</a>
         </li>
-         <li>
+        <li>
             <a href="./No.6 - 利用 CSS animation 制作一个炫酷的 Slider/index.html">No.6 - 利用 CSS animation 制作一个炫酷的 Slider</a>
         </li>
-         <li>
+        <li>
             <a href="./No.7 - 使用 animate.css 实现一个优雅的登录框/index.html">No.7 - 使用 animate.css 实现一个优雅的登录框</a>
         </li>
         <li>
             <a href="./No.8 - 把 AE 动画转换成 Web 原生动画/index.html">No.8 - 把 AE 动画转换成 Web 原生动画</a>
         </li>
-    </ul>    
+    </ul>
     <h3>MVVM学院</h3>
     <ul>
         <li>
@@ -51,6 +53,10 @@
         <li>
             <a href="./MVVM/2.4 事件处理/dist/index.html">2.4 事件处理</a>
         </li>
+        <li>
+            <a href="./MVVM/2.6/dist/index.html">2.6 插槽</a>
+        </li>
     </ul>
 </body>
+
 </html>
